syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.vertx.test.protoc.gen";

package testing;

import "vertx-struct.proto";
import "datetime.proto";

message User {
  Address address = 1;
  int32 age = 2;
  bool boolField = 3;
  int32 charField = 4;
  double doubleField = 5;
  io.vertx.protobuf.Instant instantField = 6;
  repeated int32 integerListField = 7;
  map<string, int32> integerValueMap = 8;
  io.vertx.protobuf.JsonObject jsonObjectField = 9;
  int64 longField = 10;
  bool primitiveBoolean = 11;
  int32 primitiveByte = 12;
  int32 primitiveChar = 13;
  double primitiveDouble = 14;
  float primitiveFloat = 15;
  int32 primitiveInt = 16;
  int64 primitiveLong = 17;
  int32 primitiveShort = 18;
  int32 shortField = 19;
  map<string, string> stringValueMap = 20;
  repeated Address structListField = 21;
  map<string, Address> structValueMap = 22;
  string username = 23;
  io.vertx.protobuf.ZonedDateTime zonedDateTimeField = 24;
  repeated io.vertx.protobuf.ZonedDateTime zonedDateTimeListField = 25;
  map<string, io.vertx.protobuf.ZonedDateTime> zonedDateTimeValueMap = 26;
}

message Address {
  float latitude = 1;
  float longitude = 2;
  string name = 3;
}
